This fix added a important to overflow hiddem

--- a/style.css
+++ b/style.css
@@ -457,7 +457,7 @@ header{
     height: 400px;
     border-radius: 50%;
     position : absolute;
-    overflow:hidden;
+    overflow:hidden !important;
     transform: scale(0.8);
   }
 
